--- a/styles/css/vtex.rich-text.css
+++ b/styles/css/vtex.rich-text.css
@@ -1,5 +1,6 @@
 .container--checkoutCopyright {
   align-items: center;
+  align-self: flex-start;
 }
 
 .container--checkoutCopyright .paragraph {
