--- a/styles/css/vtex.store-footer.css
+++ b/styles/css/vtex.store-footer.css
@@ -13,7 +13,7 @@
   .footerLayout--checkoutFooterMobile {
     margin-left: -1.5rem;
     margin-right: -1.5rem;
-    padding: 1.5rem 1.75rem;
+    padding: 1.75rem 1.5rem;
   }
 }
 
@@ -21,5 +21,16 @@
   .footerLayout--checkoutFooterMobile {
     margin-left: calc((100% - 100vw) / 2);
     margin-right: calc((100% - 100vw) / 2);
+  }
+}
+
+.poweredBy--checkout {
+  height: auto;
+  margin-top: 1.5rem;
+}
+
+@media only screen and (min-width: 40em) {
+  .poweredBy--checkout {
+    margin-top: 0;
   }
 }
